--- a/MeetAppWeb/package.json
+++ b/MeetAppWeb/package.json
@@ -16,10 +16,12 @@
     "@mui/material": "^7.0.1",
     "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.9.0",
+    "bootstrap": "^5.3.6",
     "formik": "^2.4.6",
     "gsap": "^3.12.7",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
