--- a/MeetAppWeb/package.json
+++ b/MeetAppWeb/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.14.0",
     "@gsap/react": "^2.1.2",
     "@mui/material": "^7.0.1",
+    "@mui/x-data-grid": "^8.4.0",
+    "@mui/x-date-pickers": "^8.4.0",
     "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
